[package]
name = "cursor"
version = "2.1.0"
authors = ["just-do-halee <just.do.halee@gmail.com>"]
homepage = "https://github.com/just-do-halee/cursor"
repository = "https://github.com/just-do-halee/cursor"
documentation = "https://docs.rs/cursor"

description = "A more free Rust-Iterator."

readme = "README.md"

keywords = ["cursor", "pointer", "iter", "iterator", "data-structure"]
categories = ["algorithms", "rust-patterns"]

license = "MIT OR Apache-2.0"
edition = "2021"

[features]
default = [ "std" ]
std = []

[dev-dependencies]
derive-new = "0.5"

[dependencies]
